--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,8 @@ install:
   - npm install
 
 script:
+  - npm run test:cover -- --single-run --no-progress --browser=ChromeNoSandbox
   - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+
+after_success:
+  - npm run coveralls
