--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,7 @@ install:
   - npm install
 
 script:
-  - npm run test:cover -- --single-run --no-progress --browser=ChromeNoSandbox
   - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
 
 after_success:
-  - npm run coveralls
+  - npm run coverage
