--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "node_modules/@fortawesome/fontawesome-free/scss/regular.scss",
               "node_modules/@fortawesome/fontawesome-free/scss/brands.scss",
               "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
-              "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
+              "node_modules/mapbox-gl/dist/mapbox-gl.css",
+              "src/assets/css/mdb.css",
               "node_modules/animate.css/animate.css",
               "src/styles.scss"
             ],
