--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
     "husky": "^3.1.0",
+    "mapbox-gl": "^1.6.1",
     "ngx-toastr": "9.1.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
