--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
+    "@angular/animations": "^8.2.14",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
@@ -31,6 +31,7 @@
     "@angular/router": "~8.2.14",
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@types/chart.js": "^2.9.7",
+    "angular-animations": "0.0.10",
     "angular-bootstrap-md": "^8.8.1",
     "animate.css": "^3.7.2",
     "chart.js": "^2.5.0",
