--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 dist: trusty
-sudo: false
-
+os:
+  - windows
 language: node_js
 node_js:
   - '12'
@@ -20,7 +20,7 @@ install:
   - npm install
 
 script:
-  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  - npm run test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
 
 after_success:
   - npm run coverage
