--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 dist: trusty
 
+os: windows
+
 language: node_js
+
 node_js:
   - '12'
 
@@ -19,7 +22,7 @@ install:
   - npm install
 
 script:
-  - npm run test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  - npm run test
 
 after_success:
   - npm run coverage
